--- a/index.html
+++ b/index.html
@@ -14,5 +14,8 @@
         <img src="imagenes/logo.png">
         <h1>Blog Curso Git</h1>
     </div>
+    <div>
+        Versión mejordad del blog
+    </div>
 </body>
 </html>
