Versión 3.0 con más contenido

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <h1>Blog Curso Git</h1>
     </div>
     <div>
-        Versión mejordad del blog
+        Versión mejordad del blog con más contenido.
     </div>
 </body>
 </html>
