--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
     <li>8. Dota 2</li>
     <li>9. League of Legends</li>
     <li>10. Minecraft</li>
+    <li>11. Rafiki</li>
 </ul>
 </body>
 </html>
