añadida la barra de navegacion

--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Overpass+Mono:wght@300..700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css"
-    <title>Blog Curso Git</title>
+    
 </head>
 <body>
-    <div>
-        <img src="imagenes/logo.png">
+    <div class="bar">
+        <img class="logo" src="imagenes/logo.png">
         <h1>Blog Curso Git</h1>
     </div>
     <div>
