Cambio titulo blog

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <div class="bar">
         <img class="logo" src="imagenes/logo.png">
-        <h1>Blog Curso Git</h1>
+        <h1>Blog Curso Git y Github</h1>
     </div>
     <div>
         Versión mejordad del blog con más contenido.
