añadidos estilos de los posts

--- a/index.html
+++ b/index.html
@@ -14,8 +14,13 @@
         <img class="logo" src="imagenes/logo.png">
         <h1>Blog Curso Git y Github</h1>
     </div>
-    <div>
-        Versión mejordad del blog con más contenido.
+    <div class = "container" id = "content">
+        <h3> Blog del usuario {nombre del usuaurio}</h3>
+        <div class = "post">
+            <h2>Titulo del post</h4>
+            <p>Este es el contenido del post.</p>
+            <br>
+            <p><span>Usuario:</span> Comentario</p>
     </div>
 <h1>Ranking de Videojuegos para PC 2023</h1>
 <ul>
