Añadimos el espacio para la publicidad

--- a/index.html
+++ b/index.html
@@ -17,28 +17,14 @@
         <img class="logo" src="imagenes/logo.png">
         <h1>Blog Curso Git y Github</h1>
     </div>
-    <div class = "container" id = "content">
-        <h3> Blog del usuario {nombre del usuaurio}</h3>
-        <div class = "post">
-            <h2>Titulo del post</h4>
-            <p>Este es el contenido del post.</p>
-            <br>
-            <p><span>Usuario:</span> Comentario</p>
+    <div>
+        Aquí irá la publicidad
     </div>
-<h1>Ranking de Videojuegos para PC 2023</h1>
-<ul>
-    <li>1. Cyberpunk 2077</li>
-    <li>2. The Witcher 3: Wild Hunt</li>
-    <li>3. Elden Ring</li>
-    <li>4. Apex Legends</li>
-    <li>5. Valorant</li>
-    <li>6. Destiny 2</li>
-    <li>7. Fortnite</li>
-    <li>8. Dota 2</li>
-    <li>9. League of Legends</li>
-    <li>10. Minecraft</li>
-    <li>11. Rafiki</li>
-    <li>12. Medieval 2 total war</li>
-</ul>
+    <div class = "container" id = "content"
+    </div>
+    
+       
+
+
 </body>
 </html>
